--- a/index.html
+++ b/index.html
@@ -273,10 +273,46 @@
     <!-- START FOOTER -->
     <div class="footer">
         <div class="footer__content">
-            <div class="footer__contact"></div>
-            <div class="footer__featured"></div>
-            <div class="footer__links"></div>
-            <div class="footer__copyrights"></div>
+            <div class="footer__contact">
+                <h3>Contact Us</h3>
+                <div class="footer__address">
+                    <i class="fa fa-map-marker-alt"></i>
+                    <span>Estate Business, #32841 block, #221DRS Real estate business building, UK.</span>
+                </div>
+                <div class="footer__tel">
+                    <i class="fa-solid fa-phone"></i>
+                    <span>+(21)-255-999-8888</span>
+                </div>
+                <div class="footer__mail">
+                    <i class="fa fa-envelope-open"></i>
+                    <span>corporate-mail@support.com</span>
+                </div>
+            </div>
+            <div class="footer__featured">
+                <h3>Featured Links</h3>
+                <ul>
+                    <li><a href="#">Graduation</a></li>
+                    <li><a href="#">Admissions</a></li>
+                    <li><a href="#">Book Store</a></li>
+                    <li><a href="#">International</a></li>
+                    <li><a href="#">Courses</a></li>
+                </ul>
+            </div>
+            <div class="footer__quick">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="clear"></div>
+            <hr>
+            <div class="footer__copyrights">
+                <p>&copy; 2020 Mastery. All rights reserved | Designed by W3layouts</p>
+            </div>
         </div>
     </div>
     <!-- END FOOTER -->
